# tango

./: .gitignore  Cargo.toml  Makefile  README.md
src/: classifier.rs  cli.rs  error.rs  integration_test.rs  lib.rs  main.rs  models.rs  parallel_parser.rs  parallel_tests.rs  parse_result.rs  parsers.rs  profiles.rs  resilient_parser.rs  statistics.rs  streaming_parser.rs  tango_integration_tests.rs  tango_parser.rs
src/commands/: convert.rs  mod.rs  output.rs  parse.rs  search.rs  stats.rs  tail.rs
src/parsers/: json_parser.rs  logfmt_parser.rs  pattern_parser.rs  plain_text_parser.rs  profile_parser.rs
