[package]
name = "tango"
version = "0.1.0"
edition = "2021"
description = "A high-performance multi-format log parser for security, sysops, and devops"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
parking_lot = "0.12"
crossbeam-channel = "0.5"
clap = { version = "4.4", features = ["derive", "cargo"] }
glob = "0.3"
colored = "2.1"
csv = "1.3"
notify = "6.1"
humantime = "2.1"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"

[[bin]]
name = "tango"
path = "src/main.rs"
